[package]
name = "wework-bot"
version = "0.1.0"
authors = ["RXDA <sxfscool@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cron = "0.6.0"
yaml-rust = "0.4.3"
reqwest = { version = "0.10.4", features = ["blocking","json"] }
tokio = { version = "0.2.13", features = ["full"] }
serde_json = "1.0.48"
serde = { version = "1.0", features = ["derive"] }